src/sass/framework/_header.scss
#header, #mobile-toggle {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    z-index: 1001;
    min-height: var(--headerheight);
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    color: #fff;
    @include media("min", 768, 0) {
        padding: 15px var(--pageoffset);
    }

    > .logo {
        margin-right:auto;
        width:90px;
    }
}

@mixin button($size) {
    @include vw-font-size($size); line-height:20/$size*1em; border-radius:22.5/$size*1em;
    @include media("min",768,0) {
        padding:12.5/$size*1em 20/$size*1em;
    }
    @include media("max",767,0) {
        padding:35/$size*1em 0;
    }
}
#header {
    @include media("min",768,0) {
        &::before {
            content:''; left:var(--pageoffset); right:var(--pageoffset); top:100%; height:1px; background:rgba(#fff,0.1);
            display:block; position:absolute;
        }
    }
        .nav {
            @include media("min",768,0) {
            > li {
                > a {
                    text-decoration:none; font-weight:600;
                    @include button(15); display:block;
                    &:hover {
                        color:rgba(#fff,0.5);
                    }
                }
                &.dropdown > a::after {
                    content:'\f107'; font-family:$icons; margin-left:5/15*1em; font-weight:normal;
                }
            }
            &.topnav {
                @include vw-margin(0,0,0,20);
                > li {
                    > a {
                        font-weight:500;
                    }
                    &.cta > a {
                        @include button(16); font-weight:600;
                        border:1px solid currentColor;
                        padding:11.5/16*1em 25/16*1em;
                    }
                }
            }
        }
    }
}
#mobile-toggle {
    z-index: 1002;
    > .logo {
        margin-left:auto; margin-right:0;
        opacity:1; transition:all .3s ease-in-out;
    }
    @include media("max", 767, 0) {
        padding: 20px 25px;
    }
}
body.menu-open #mobile-toggle {
    > .logo {
        opacity:0;
    }
}
// Set toggle header display none for mobile
@include media("min",768,0) {
    #mobile-toggle {
            display:none;
    }
}
// Set header display none by default for mobile
@include media("max",767,0) {
    #header {
        position: fixed; right:0; top: 0; transform:translate(0,-100%);
        height: 100vh; height:var(--vh);
        width:100vw;
        background:$xdgrey; overflow:hidden;
        opacity:0; visibility:hidden;
        transition:all .4s ease-in-out;
        @include vw-padding(170,100,100);

        display:flex; flex-direction:column; justify-content:flex-start; align-items:stretch;
        > .logo {
            align-self:flex-end; margin-right:0; margin-left:auto;
            width:120px;
            @include vw-margin(0,0,60);
        }


        .nav {
            flex-direction:column; justify-content:flex-start; align-items:flex-start;
                > li {
                    > a {
                        text-decoration:none; font-weight:600;
                        display:block;
                        @include button(45);
                    }
                }
                &.topnav {
                    @include vw-margin(50,0);
                    > li {
                        > a {
                            font-weight:500;
                        }
                    }
                }
        }
    }
    body.menu-open #header {
        transform:translate(0,0);
        opacity:1;
        visibility: visible;
    }
}

